<resources>
    <string name="app_name">Paintball Demo</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="itemPlayerName">Your name</string>
    <string name="done">Done</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_name">Your name</string>
    <string name="join_red">Join red</string>
    <string name="view_players">View players</string>
    <string name="join_blue">Join blue</string>
    <string name="refresh">refresh</string>
    <string name="enter_the_game_name">Enter the game name</string>
    <string name="game_name">Game name</string>
    <string name="select_the_game_type">Select the game type</string>
    <string name="enter_the_game_time">Enter the game time</string>
    <string name="game_time">Game time</string>
    <string name="create">Create</string>
    <string name="fill_out">Please fill out this part</string>
    <string name="username_not_found">Username not found</string>
    <string name="waiting_for_admin">Waiting for admin to start game</string>
    <string name="type_is">Type: %1$s</string>
    <string name="localization_mode_is">Localization mode: %1$s</string>
    <string name="map_name_is">Map name: %1$s</string>
    <string name="player_cnt">Players: %1$d</string>
    <string name="view_players_">View players (%1$d)</string>
    <string name="joined_blue">Joined blue</string>
    <string name="joined_red">Joined red</string>
    <string name="i_m_shoot">I\'m shot</string>
    <string name="spy_on_enemy">Spy on enemy</string>
    <string name="players">players</string>
    <string name="time">Time:</string>
    <string name="test_player">TestPlayer</string>
    <string name="test_game">TestGame</string>
    <string name="test_time">120</string>
    <string name="speak_with_team">Speak with team</string>
    <string name="team_radio">Team radio</string>
    <string name="connect">Connect</string>
    <string name="select_your_tag">Connect your tag</string>
    <string name="no_tags_found">No tags found</string>
    <string name="test_tag">Test tag</string>
    <string name="searching_tags">Searching for tags</string>
    <string name="connecting_to_tag">Connecting to %1$s</string>
    <string name="remaining_players">%1$d/%2$d</string>
    <string name="player_left_the_game">%1$s left the game</string>
    <string name="type_dm">Type: DM</string>
    <string name="localization_mode_UWB">Localization mode: UWB</string>
    <string name="players_8">Players: 8</string>
    <string name="map_name_gyenes">Map name: Gyenes</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="your_password">Your password</string>
    <string name="select_game_to_join">Select game to join</string>
</resources>